[gd_scene load_steps=15 format=3 uid="uid://hgrksmummwv0"]

[ext_resource type="Script" uid="uid://caseuyrdmakps" path="res://scripts/ui/main_ui.gd" id="1_4xgkk"]
[ext_resource type="Script" uid="uid://cwnv5i1gfxf3o" path="res://scripts/ui/player_ui.gd" id="2_yyelw"]
[ext_resource type="Shader" uid="uid://dtpxdtvbjh6t" path="res://scripts/shader/vignette.gdshader" id="3_lcjjm"]
[ext_resource type="Texture2D" uid="uid://uq1uagwh18vv" path="res://assets/placeholder/square.png" id="4_1vp2p"]
[ext_resource type="Texture2D" uid="uid://buij7cq2iihvp" path="res://assets/textures/kenney_borders/default/Border/panel-border-013.png" id="4_07ked"]
[ext_resource type="Texture2D" uid="uid://dsqcru2h58r83" path="res://assets/Player/sprite/weapon_rifle.png" id="4_kvrx6"]
[ext_resource type="Texture2D" uid="uid://b5oyt8wn2cl4n" path="res://assets/textures/kenney_borders/default/Border/panel-border-028.png" id="5_qbwp1"]
[ext_resource type="PackedScene" uid="uid://ck0jasabkl7co" path="res://scenes/menus/PauseMenu.tscn" id="6_t0vuv"]
[ext_resource type="Texture2D" uid="uid://cwp34g2fynu22" path="res://assets/textures/kenney_borders/default/Border/panel-border-008.png" id="7_lcjjm"]
[ext_resource type="PackedScene" uid="uid://cpwdv7vvm7kdc" path="res://scenes/ui/InventoryUI.tscn" id="7_pb8bc"]
[ext_resource type="PackedScene" uid="uid://b5qjcot0kmmft" path="res://scenes/ui/MinimapSquare.tscn" id="8_qg6rx"]
[ext_resource type="PackedScene" uid="uid://bsm72mj6udeil" path="res://scenes/ui/DebugUI.tscn" id="12_7s5y6"]
[ext_resource type="PackedScene" uid="uid://bcde5fosbcqr5" path="res://scenes/ui/RecipeBook.tscn" id="13_mjmcw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7s5y6"]
resource_local_to_scene = true
shader = ExtResource("3_lcjjm")
shader_parameter/alpha = 0.5
shader_parameter/inner_radius = 0.0
shader_parameter/outer_radius = 1.0

[node name="MainUI" type="Control" groups=["ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_4xgkk")

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_yyelw")
minimap_square_prefab = ExtResource("8_qg6rx")

[node name="VignetteShader" type="ColorRect" parent="PlayerUI"]
material = SubResource("ShaderMaterial_7s5y6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="TextureProgressBar" parent="PlayerUI"]
layout_mode = 1
offset_left = 32.0
offset_top = 24.0
offset_right = 392.0
offset_bottom = 44.0
mouse_filter = 2
value = 25.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("4_1vp2p")
texture_progress = ExtResource("4_1vp2p")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0.292969, 0.0190454, 0, 1)

[node name="HealthBarBorder" type="NinePatchRect" parent="PlayerUI"]
self_modulate = Color(0.596078, 0.458824, 0.329412, 1)
layout_mode = 1
offset_left = 24.0
offset_top = 24.0
offset_right = 400.0
offset_bottom = 44.0
texture = ExtResource("5_qbwp1")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="StaminaBar" type="TextureProgressBar" parent="PlayerUI"]
layout_mode = 1
offset_left = 31.0
offset_top = 53.0
offset_right = 286.0
offset_bottom = 67.0
mouse_filter = 2
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("4_1vp2p")
texture_progress = ExtResource("4_1vp2p")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0.175849, 0.451107, 0.30898, 1)

[node name="StaminaBarBorder" type="NinePatchRect" parent="PlayerUI/StaminaBar"]
self_modulate = Color(0.596078, 0.458824, 0.329412, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -3.0
offset_right = 7.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_lcjjm")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="GunInfo" type="ColorRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -64.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 0.784314)

[node name="GunTexture" type="TextureRect" parent="PlayerUI/GunInfo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -20.0
offset_right = 120.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_kvrx6")
expand_mode = 3

[node name="AmmoCount" type="Label" parent="PlayerUI/GunInfo"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -40.0
offset_right = 58.0
offset_bottom = 5.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.898039, 0.827451, 0.701961, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "5/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="PlayerUI/GunInfo"]
self_modulate = Color(0.596078, 0.458824, 0.329412, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_07ked")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="DayLabel" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 58.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Day 1"
horizontal_alignment = 2

[node name="MinimapBG" type="ColorRect" parent="PlayerUI"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -224.0
offset_right = 240.0
offset_bottom = -8.0
grow_vertical = 0
color = Color(0, 0, 0, 0.52549)

[node name="Minimap" type="ScrollContainer" parent="PlayerUI/MinimapBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="PlayerUI/MinimapBG/Minimap"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 7

[node name="NinePatchRect" type="NinePatchRect" parent="PlayerUI/MinimapBG"]
self_modulate = Color(0.596078, 0.458824, 0.329412, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_07ked")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="PauseMenu" parent="." instance=ExtResource("6_t0vuv")]
visible = false
layout_mode = 1
mouse_filter = 1

[node name="Inventory" parent="." instance=ExtResource("7_pb8bc")]
visible = false
layout_mode = 1

[node name="DebugUI" parent="." instance=ExtResource("12_7s5y6")]
layout_mode = 1

[node name="RecipeBook" parent="." instance=ExtResource("13_mjmcw")]
visible = false
layout_mode = 1

[node name="ControlText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -167.0
offset_right = -8.0
offset_bottom = -71.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.713)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.713)
theme_override_font_sizes/font_size = 12
text = "Shift - Run
Space - Dodge
E - Interact
I - Inventory
B - Recipe Book"
horizontal_alignment = 2
